# fastapi-elk-stack

./: .gitignore  docker-compose.yml  pyproject.toml
app/: dockerfile  log_conf.yaml  logging_middlware.py  logging_setup.py  main.py
elasticsearch-data/_state/: _18.cfe  _18.cfs  _18.si  _18_1.liv  _19.cfe  _19.cfs  _19.si  _19_2.liv  _1a.cfe  _1a.cfs  _1a.si  _1a_2.liv  _1b.cfe  _1b.cfs  _1b.si  _1b_2.liv  _1c.cfe  _1c.cfs  _1c.si  _1c_2.liv  _1d.cfe  _1d.cfs  _1d.si  _1d_1.liv  _1g.cfe  _1g.cfs  _1g.si  _1h.cfe  _1h.cfs  _1h.si  _1l.cfe  _1l.cfs  _1l.si  _1m.cfe  _1m.cfs  _1m.si  _1q.cfe  _1q.cfs  _1q.si  _1q_1.liv  (+132 more)
elasticsearch-data/indices/-Ga2_sfdQdmYVkAu7o7xWA/_state/: state-2.st
elasticsearch-data/indices/-lcv6TEKTrmVp3oFMSm9pg/_state/: state-1.st
elasticsearch-data/indices/10Hj7jkdTHCaKJNqcIHtpA/_state/: state-2.st
elasticsearch-data/indices/18kw0u17RSi-ZVfxmsOBPg/_state/: state-1.st
elasticsearch-data/indices/3wvmC2kKRkeO846fXPsg7w/_state/: state-5.st
elasticsearch-data/indices/7o0gq0NrSN-40j-V-t8Kug/_state/: state-1.st
elasticsearch-data/indices/9AZd3rHiRwyGCDXl7iMcQg/_state/: state-1.st
elasticsearch-data/indices/9Tak-CllTSGNRG54Uh-w4w/_state/: state-5.st
elasticsearch-data/indices/BdMErpEvR1Slr3qtpztsPA/_state/: state-5.st
elasticsearch-data/indices/CDwNU1RLRBiMlZNpLEnCEg/_state/: state-5.st
elasticsearch-data/indices/CSUpFDZUSwODDdFj9QUiow/_state/: state-5.st
elasticsearch-data/indices/CnDad7N5RRy9VhdsUjx3VQ/_state/: state-5.st
elasticsearch-data/snapshot_cache/: segments_2
filebeat/: dockerfile  filebeat.yml
(+313 files in other folders)
